# playground-py

./: README.md  aqua.yaml
.github/workflows/: actions-security.yml  ci.yml
helloworld/: README.md  pyproject.toml
helloworld/src/helloworld/: __init__.py  __main__.py
